tests/paczka1/fuzzy1/60780590.err
Error in line 3: mNOCGZcWbi A1l6 16,2
Error in line 7: S236 A196 71,1
Error in line 10: S236 S236 37,2
Error in line 20: dHdetE S236 83,5
